Add tests for loadtxt and savetxt

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,9 +1,12 @@
 set(SRC
     stdlib_types.f90
     stdlib_io.f90
+    stdlib_error.f90
 )
 
 add_library(fortran_stdlib ${SRC})
+
+add_subdirectory(tests)
 
 install(TARGETS fortran_stdlib
         RUNTIME DESTINATION bin
