Add initial GitHub CI

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,17 +1,37 @@
 name: CI
 
-on: [push]
+on: [push, pull_request]
 
 jobs:
-  build:
-
+  Linux:
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v1
-    - name: Run a one-line script
-      run: echo Hello, world!
-    - name: Run a multi-line script
-      run: |
-        echo Add other actions to build,
-        echo test, and deploy your project.
+    - name: cmake
+      run: cmake .
+    - name: make
+      run: make
+    - name: test
+      run: ctest --output-on-failure
+
+  macOS:
+    runs-on: macos-latest
+    steps:
+    - uses: actions/checkout@v1
+    - name: cmake
+      run: cmake .
+    - name: make
+      run: make
+    - name: test
+      run: ctest --output-on-failure
+
+  Windows:
+    runs-on: windows-latest
+    steps:
+    - uses: actions/checkout@v1
+    - name: cmake
+      run: cmake -G "Visual Studio 16 2019" .
+    - name: make
+      run: cmake --build .
+    - name: test
+      run: ctest --output-on-failure
