Install GFortran on Linux

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,6 +7,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v1
+    - name: Install GFortran
+      run: sudo apt-get install gfortran
     - name: cmake
       run: cmake .
     - name: make
