--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,6 +33,8 @@ jobs:
     runs-on: windows-latest
     steps:
     - uses: actions/checkout@v1
+    - name: Install GFortran
+      run: conda install -c conda-forge flang
     - name: cmake
       run: cmake -G "Visual Studio 16 2019" .
     - name: make
