improve cmake build
* use CMAKE_Fortran_MODULE_DIRECTORY to avoid introspecting directory structure
* don't build in-source, use test WORKING_DIRECTORY instead
* use modern add_test() syntax to avoid introspecting project directory structure
* use open(..., action=) to help indicate / safeguard intended file use
* don't have to accomodate CMake <= 2.4 circa 2006

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,8 @@
-cmake_minimum_required(VERSION 3.5.0 FATAL_ERROR)
-
-enable_language(Fortran)
-
-project(stdlib)
-
+cmake_minimum_required(VERSION 3.5.0)
+project(stdlib Fortran)
 enable_testing()
+
+# this avoids stdlib and projects using stdlib from having to introspect stdlib's directory structure
+set(CMAKE_Fortran_MODULE_DIRECTORY ${CMAKE_BINARY_DIR})
 
 add_subdirectory(src)
