--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,6 +3,7 @@ set(SRC
     stdlib_experimental_io.f90
     stdlib_experimental_error.f90
     stdlib_experimental_optval.f90
+    stdlib_experimental_kinds.f90
 )
 
 add_library(fortran_stdlib ${SRC})
