CI: Test manual Makefiles
For now only on Linux and only with one compiler.

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -66,3 +66,8 @@ jobs:
           cmake .
           cmake --build .
           cmake --build . --target test
+
+    - name: Test manual makefiles
+      if: contains(matrix.os, 'ubuntu') && contains(matrix.gcc_v, '9')
+      run: |
+        make -f Makefile.manual
