Refactor the manual Makefiles
* Compile the quadruple precision loadtxt
* Implement "make test" to run tests and run them at the CI
* Create a static libstdlib.a library and use it in tests
* Use more modern syntax and simplify
* Pass in the FC/FCFLAGS variables automatically
* Consolidate stdlib tests targets

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -71,3 +71,5 @@ jobs:
       if: contains(matrix.os, 'ubuntu') && contains(matrix.gcc_v, '9')
       run: |
         make -f Makefile.manual
+        make -f Makefile.manual test
+        make -f Makefile.manual clean
