--- a/src/Makefile.manual
+++ b/src/Makefile.manual
@@ -1,10 +1,13 @@
+SRC = stdlib_experimental_ascii.f90 \
+      stdlib_experimental_error.f90 \
+      stdlib_experimental_io.f90 \
+      f18estop.f90
+
 LIB = libstdlib.a
 
-OBJS = stdlib_experimental_ascii.o \
-       stdlib_experimental_error.o \
-       stdlib_experimental_io.o \
-	   f18estop.o
 
+
+OBJS = $(SRC:.f90=.o)
 MODS = $(OBJS:.o=.mod)
 
 .PHONY: all clean
