--- a/src/tests/loadtxt/Makefile.manual
+++ b/src/tests/loadtxt/Makefile.manual
@@ -9,21 +9,21 @@ LDFLAGS = -L../.. -lstdlib
 
 OBJS = $(PROGS_SRC:.f90=.o)
 PROGS = $(OBJS:.o=)
+TESTPROGS = $(PROGS:=TEST)
 
 
 
-.PHONY: all clean test
+.PHONY: all clean test $(TESTPROGS)
 
 all: $(PROGS)
 
 $(PROGS): %: %.o
 	$(FC) $(FFLAGS) $(CPPFLAGS) -o $@ $^ $(LDFLAGS)
 
-test:
-	./test_loadtxt
-	./test_loadtxt_qp
-	./test_savetxt
-	./test_savetxt_qp
+test: $(TESTPROGS)
+
+$(TESTPROGS):
+	./$(@:TEST=)
 
 clean:
 	$(RM) $(PROGS) $(OBJS) tmp.dat tmp_qp.dat
