--- a/src/tests/loadtxt/Makefile.manual
+++ b/src/tests/loadtxt/Makefile.manual
@@ -8,26 +8,4 @@ CLEAN_FILES = tmp.dat tmp_qp.dat
 CPPFLAGS = -I../..
 LDFLAGS = -L../.. -lstdlib
 
-
-
-OBJS = $(PROGS_SRC:.f90=.o)
-PROGS = $(OBJS:.o=)
-TESTPROGS = $(PROGS:=TEST)
-
-.PHONY: all clean test $(TESTPROGS)
-
-all: $(PROGS)
-
-test: $(TESTPROGS)
-
-$(TESTPROGS):
-	./$(@:TEST=)
-
-clean:
-	$(RM) $(PROGS) $(OBJS) $(CLEAN_FILES)
-
-%.o: %.f90
-	$(FC) $(FFLAGS) $(CPPFLAGS) -c $<
-
-$(PROGS): %: %.o
-	$(FC) $(FFLAGS) $(CPPFLAGS) -o $@ $^ $(LDFLAGS)
+include ../Makefile.manual.test.mk
