--- a/src/Makefile.manual
+++ b/src/Makefile.manual
@@ -2,6 +2,7 @@ SRC = stdlib_experimental_ascii.f90 \
       stdlib_experimental_error.f90 \
       stdlib_experimental_io.f90 \
       stdlib_experimental_optval.f90 \
+      stdlib_experimental_kinds.f90 \
       f18estop.f90
 
 LIB = libstdlib.a
@@ -28,4 +29,7 @@ clean:
 
 # Fortran module dependencies
 f18estop.o: stdlib_experimental_error.o
-stdlib_experimental_io.o: stdlib_experimental_error.o stdlib_experimental_optval.o
+stdlib_experimental_io.o: \
+	stdlib_experimental_error.o \
+	stdlib_experimental_optval.o \
+	stdlib_experimental_kinds.o
