add tests for optval

--- a/src/tests/CMakeLists.txt
+++ b/src/tests/CMakeLists.txt
@@ -1,5 +1,6 @@
 add_subdirectory(ascii)
 add_subdirectory(loadtxt)
+add_subdirectory(optval)
 
 add_executable(test_skip test_skip.f90)
 target_link_libraries(test_skip fortran_stdlib)
