--- a/src/tests/io/Makefile.manual
+++ b/src/tests/io/Makefile.manual
@@ -4,7 +4,7 @@ PROGS_SRC = test_loadtxt.f90 \
 			test_savetxt_qp.f90 \
 			test_open.f90
 
-CLEAN_FILES = tmp.dat tmp_qp.dat
+CLEAN_FILES = tmp.dat tmp_qp.dat io_open.dat io_open.stream
 
 
 include ../Makefile.manual.test.mk
