Manual Makefiles: add a new dependency

--- a/src/Makefile.manual
+++ b/src/Makefile.manual
@@ -27,3 +27,4 @@ clean:
 
 # Fortran module dependencies
 f18estop.o: stdlib_experimental_error.o
+stdlib_experimental_io.o: stdlib_experimental_error.o
