modification of parse_mode + separation of test_open and test_parse_mode (+additional tests)

--- a/src/tests/io/Makefile.manual
+++ b/src/tests/io/Makefile.manual
@@ -2,6 +2,7 @@ PROGS_SRC = test_loadtxt.f90 \
 			test_savetxt.f90 \
 			test_loadtxt_qp.f90 \
 			test_savetxt_qp.f90 \
+			test_parse_mode.f90 \
 			test_open.f90
 
 CLEAN_FILES = tmp.dat tmp_qp.dat io_open.dat io_open.stream
