--- a/src/Makefile.manual
+++ b/src/Makefile.manual
@@ -33,3 +33,4 @@ stdlib_experimental_io.o: \
 	stdlib_experimental_error.o \
 	stdlib_experimental_optval.o \
 	stdlib_experimental_kinds.o
+stdlib_experimental_optval.o: stdlib_experimental_kinds.o
