--- a/src/tests/CMakeLists.txt
+++ b/src/tests/CMakeLists.txt
@@ -1,3 +1,11 @@
+macro(ADDTEST name)
+    add_executable(test_${name} test_${name}.f90)
+    target_link_libraries(test_${name} fortran_stdlib)
+    add_test(NAME ${name}
+             COMMAND $<TARGET_FILE:test_${name}> ${CMAKE_CURRENT_BINARY_DIR}
+             WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})
+endmacro(ADDTEST)
+
 add_subdirectory(ascii)
 add_subdirectory(io)
 add_subdirectory(optval)
