--- a/src/tests/ascii/CMakeLists.txt
+++ b/src/tests/ascii/CMakeLists.txt
@@ -1,4 +1,1 @@
-add_executable(test_ascii test_ascii.f90)
-target_link_libraries(test_ascii fortran_stdlib)
-
-add_test(NAME ASCII COMMAND $<TARGET_FILE:test_ascii>)
+ADDTEST(ascii)
