--- a/src/tests/optval/CMakeLists.txt
+++ b/src/tests/optval/CMakeLists.txt
@@ -1,4 +1,1 @@
-add_executable(test_optval test_optval.f90)
-target_link_libraries(test_optval fortran_stdlib)
-
-add_test(NAME OPTVAL COMMAND $<TARGET_FILE:test_optval>)
+ADDTEST(optval)
