add missing implicit none, set compiler flags to force implicit none
also set minimum CMake version to 3.14 per prior discussion and add
example check requiring 3.14: real128

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,12 +1,25 @@
-cmake_minimum_required(VERSION 3.5.0)
+cmake_minimum_required(VERSION 3.14.0)
 project(stdlib Fortran)
 enable_testing()
 
 # this avoids stdlib and projects using stdlib from having to introspect stdlib's directory structure
+# FIXME: this eventually needs to be handled more precisely, as this spills all .mod/.smod into one directory
+#  and thereby can clash if module/submodule names are the same in different parts of library
 set(CMAKE_Fortran_MODULE_DIRECTORY ${CMAKE_BINARY_DIR})
 
-# compiler feature checks
+# --- compiler options
+if(CMAKE_Fortran_COMPILER_ID STREQUAL GNU)
+  add_compile_options(-fimplicit-none)
+elseif(CMAKE_Fortran_COMPILER_ID STREQUAL Intel)
+  add_compile_options(-warn declarations)
+elseif(CMAKE_Fortran_COMPILER_ID STREQUAL PGI)
+  add_compile_options(-Mdclchk)
+endif()
+
+# --- compiler feature checks
 include(CheckFortranSourceCompiles)
+include(CheckFortranSourceRuns)
 check_fortran_source_compiles("error stop i; end" f18errorstop SRC_EXT f90)
+check_fortran_source_runs("use, intrinsic :: iso_fortran_env, only : real128; real(real128) :: x; x = x+1; end" f03real128)
 
 add_subdirectory(src)
