--- a/src/tests/io/CMakeLists.txt
+++ b/src/tests/io/CMakeLists.txt
@@ -1,10 +1,12 @@
 ADDTEST(loadtxt)
 ADDTEST(savetxt)
 
-ADDTEST(loadtxt_qp)
-ADDTEST(savetxt_qp)
-set_tests_properties(loadtxt_qp PROPERTIES LABELS quadruple_precision)
-set_tests_properties(savetxt_qp PROPERTIES LABELS quadruple_precision)
+if(REAL128)
+  ADDTEST(loadtxt_qp)
+  ADDTEST(savetxt_qp)
+  set_tests_properties(loadtxt_qp PROPERTIES LABELS quadruple_precision)
+  set_tests_properties(savetxt_qp PROPERTIES LABELS quadruple_precision)
+endif()
 
 ADDTEST(open)
 ADDTEST(parse_mode)
