--- a/.github/workflows/ci_real128.yml
+++ b/.github/workflows/ci_real128.yml
@@ -1,4 +1,4 @@
-name: CI_windows
+name: ci_real128
 
 on: [push, pull_request]
 
@@ -6,16 +6,24 @@ env:
   CI: "ON"
 
 jobs:
-  cmake:
-    runs-on: windows-latest
+  linux:
+    runs-on: ubuntu-latest
     strategy:
       fail-fast: false
 
     steps:
     - uses: actions/checkout@v1
 
-    - run: cmake -G "MinGW Makefiles" -DCMAKE_SH="CMAKE_SH-NOTFOUND" -Wdev -B build -DCMAKE_BUILD_TYPE=Debug -DCMAKE_Fortran_FLAGS_DEBUG="-Wall -Wextra -Wimplicit-interface -fPIC -g -fcheck=all -fbacktrace"
+    - name: Set up Python 3.x
+      uses: actions/setup-python@v1
+      with:
+        python-version: 3.x
 
+    - name: Set up CMake
+      run: pip install --upgrade cmake
+
+    - name: Cmake configure
+    - run: cmake -DREAL128=true -B build
       env:
         FC: gfortran
         CC: gcc
@@ -28,11 +36,11 @@ jobs:
       if: failure()
 
     - name: CTest
-      run: ctest --output-on-failure --parallel -V -LE quadruple_precision
+      run: ctest --output-on-failure --parallel -V
       working-directory: build
 
     - uses: actions/upload-artifact@v1
       if: failure()
       with:
-        name: WindowsCMakeTestlog
+        name: Real128CMakeTestlog
         path: build/Testing/Temporary/LastTest.log
