--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -9,6 +9,14 @@ set(SRC
 
 add_library(fortran_stdlib ${SRC})
 
+set(LIB_MOD_DIR ${CMAKE_CURRENT_BINARY_DIR}/mod_files/)
+set_target_properties(fortran_stdlib PROPERTIES
+    Fortran_MODULE_DIRECTORY ${LIB_MOD_DIR})
+target_include_directories(fortran_stdlib PUBLIC
+    $<BUILD_INTERFACE:${LIB_MOD_DIR}>
+    $<INSTALL_INTERFACE:include>
+)
+
 if(f18errorstop)
   target_sources(fortran_stdlib PRIVATE f18estop.f90)
 else()
@@ -22,3 +30,4 @@ install(TARGETS fortran_stdlib
         ARCHIVE DESTINATION lib
         LIBRARY DESTINATION lib
     )
+install(DIRECTORY ${LIB_MOD_DIR} DESTINATION include)
