addition of stdlib_experimental_stats function mean
Squashed commit of the following:

commit 3266163757d27309e87ba549324ad960d1473952
Merge: e96c12d 4274f0d
Author: Vandenplas, Jeremie <jeremie.vandenplas@gmail.com>
Date:   Tue Jan 21 20:47:32 2020 +0100

    modification of CMake and Makefile

    Merge branch 'stat_cmake' into stat_dev

commit 4274f0d7fec31d98cc4ef172129eb23f44cb71ad
Author: Vandenplas, Jeremie <jeremie.vandenplas@gmail.com>
Date:   Tue Jan 21 20:44:24 2020 +0100

    stat_cmake: update Makefile

commit 17e3d1640a993ba484de5e9869797f99a423eae7
Author: Vandenplas, Jeremie <jeremie.vandenplas@gmail.com>
Date:   Tue Jan 21 20:35:19 2020 +0100

    second try cmake

commit 397eb1864302f724531ca392dee3d90a2cce675b
Author: Vandenplas, Jeremie <jeremie.vandenplas@gmail.com>
Date:   Tue Jan 21 20:18:37 2020 +0100

    Modifications of CMake for tests on Ubuntu 7

commit e96c12dc88e559e54af476e105916165cab80712
Author: Vandenplas, Jeremie <jeremie.vandenplas@gmail.com>
Date:   Tue Jan 21 19:40:05 2020 +0100

    small change in md

commit 7eec9aedea3695f9b0a6f2238a22b4dc885f912e
Author: Vandenplas, Jeremie <jeremie.vandenplas@gmail.com>
Date:   Tue Jan 21 19:37:06 2020 +0100

    stat_dev: renamed stat to stats

commit 8199b6df7a69eaca383d327fdbb0da8cf2d3063f
Author: Vandenplas, Jeremie <jeremie.vandenplas@gmail.com>
Date:   Tue Jan 21 19:26:20 2020 +0100

    stat_dev: changed spec

commit b1c481dd270392d66d761a593ee5c2ca80cfeed8
Author: Vandenplas, Jeremie <jeremie.vandenplas@gmail.com>
Date:   Tue Jan 21 19:15:25 2020 +0100

    stat_dev: modifs following comments

commit e64657c903caca25d151a44111b6b1ab8ea87ce8
Author: Vandenplas, Jeremie <jeremie.vandenplas@gmail.com>
Date:   Tue Jan 21 14:23:59 2020 +0100

    stat_dev: addition of .md file for mean

commit ad504e8da6e299fda994d3c4f5a5ee91d3c944bd
Merge: 5a1adcb bab50e3
Author: Vandenplas, Jeremie <jeremie.vandenplas@gmail.com>
Date:   Tue Jan 21 13:16:21 2020 +0100

    Merge remote-tracking branch

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -23,6 +23,14 @@ else()
   target_sources(fortran_stdlib PRIVATE f08estop.f90)
 endif()
 
+if(f03rank)
+  target_sources(fortran_stdlib PRIVATE f03_stdlib_experimental_stats.f90)
+  target_sources(fortran_stdlib PRIVATE f03_stdlib_experimental_stats_mean.f90)
+else()
+  target_sources(fortran_stdlib PRIVATE f90_stdlib_experimental_stats.f90)
+  target_sources(fortran_stdlib PRIVATE f90_stdlib_experimental_stats_mean.f90)
+endif()
+
 add_subdirectory(tests)
 
 install(TARGETS fortran_stdlib
