--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,3 +1,45 @@
+### Pre-process: .fpp -> .f90 via Fypp
+
+# Create a list of the files to be preprocessed
+set(fppFiles
+    stdlib_experimental_stats.fypp
+    stdlib_experimental_stats_mean.fypp
+)
+
+# Pre-process
+foreach(infileName IN LISTS fppFiles)
+
+    # Generate output file name
+    string(REGEX REPLACE ".fypp\$" ".f90" outfileName "${infileName}")
+
+    # Create the full path for the new file
+    set(outfile "${CMAKE_CURRENT_BINARY_DIR}/${outfileName}")
+
+    # Generate input file name
+    set(infile "${CMAKE_CURRENT_SOURCE_DIR}/${infileName}")
+
+    # Custom command to do the processing
+if(f03rank)
+    add_custom_command(
+        OUTPUT "${outfile}"
+        COMMAND fypp "${infile}" "${outfile}"
+        MAIN_DEPENDENCY "${infile}"
+        VERBATIM)
+else()
+    add_custom_command(
+        OUTPUT "${outfile}"
+        COMMAND fypp -DVERSION90 "${infile}" "${outfile}"
+        MAIN_DEPENDENCY "${infile}"
+        VERBATIM)
+endif()
+
+    # Finally add output file to a list
+    set(outFiles ${outFiles} "${outfile}")
+
+endforeach(infileName)
+
+
+
 set(SRC
     stdlib_experimental_ascii.f90
     stdlib_experimental_io.f90
@@ -5,6 +47,7 @@ set(SRC
     stdlib_experimental_kinds.f90
     stdlib_experimental_optval.f90
     stdlib_experimental_system.F90
+    ${outFiles}
 )
 
 add_library(fortran_stdlib ${SRC})
