--- a/src/Makefile.manual
+++ b/src/Makefile.manual
@@ -3,7 +3,9 @@ SRC = stdlib_experimental_ascii.f90 \
       stdlib_experimental_io.f90 \
       stdlib_experimental_optval.f90 \
       stdlib_experimental_kinds.f90 \
-      f18estop.f90
+      f18estop.f90 \
+      stdlib_experimental_stats.f90 \
+      stdlib_experimental_stats_mean.f90
 
 LIB = libstdlib.a
 
@@ -26,6 +28,8 @@ clean:
 %.o: %.f90
 	$(FC) $(FFLAGS) -c $<
 
+%.f90: %.fypp
+	fypp $(FYPPFLAGS) $< $@
 
 # Fortran module dependencies
 f18estop.o: stdlib_experimental_error.o
@@ -34,3 +38,9 @@ stdlib_experimental_io.o: \
 	stdlib_experimental_optval.o \
 	stdlib_experimental_kinds.o
 stdlib_experimental_optval.o: stdlib_experimental_kinds.o
+stdlib_experimental_stats_mean.o: \
+	stdlib_experimental_optval.o \
+	stdlib_experimental_kinds.o \
+	stdlib_experimental_stats.o
+stdlib_experimental_stats.f90: stdlib_experimental_stats.fypp
+stdlib_experimental_stats_mean.f90: stdlib_experimental_stats_mean.fypp
