--- a/src/tests/stats/CMakeLists.txt
+++ b/src/tests/stats/CMakeLists.txt
@@ -1,5 +1,9 @@
 ADDTEST(mean)
 
-if(f03rank)
-ADDTEST(mean_f03)
+if(DEFINED CMAKE_MAXIMUM_RANK)
+    if(${CMAKE_MAXIMUM_RANK} GREATER 7)
+        ADDTEST(mean_f03)
+    endif()
+elseif(f03rank)
+    ADDTEST(mean_f03)
 endif()
