--- a/.github/workflows/doc-deployment.yml
+++ b/.github/workflows/doc-deployment.yml
@@ -47,7 +47,7 @@ jobs:
           RECURSIVE: true
           ASSIGNEES: ${{ github.actor }}
       - name: Deploy API Docs
-        uses: peaceiris/gh-pages@v3
+        uses: peaceiris/actions-gh-pages@v3
 #        if: github.event_name == 'push' && ( startsWith( github.ref, 'refs/tags/' ) || github.ref == 'refs/heads/master' )
         with:
           deploy_key: ${{ secrets.ACTIONS_DEPLOY_KEY }}
