--- a/.github/workflows/doc-deployment.yml
+++ b/.github/workflows/doc-deployment.yml
@@ -48,7 +48,7 @@ jobs:
           ASSIGNEES: ${{ github.actor }}
       - name: Deploy API Docs
         uses: peaceiris/actions-gh-pages@v3
-#        if: github.event_name == 'push' && ( startsWith( github.ref, 'refs/tags/' ) || github.ref == 'refs/heads/master' )
+        if: github.event_name == 'push' && ( startsWith( github.ref, 'refs/tags/' ) || github.ref == 'refs/heads/master' )
         with:
           deploy_key: ${{ secrets.ACTIONS_DEPLOY_KEY }}
           external_repository: fortran-lang/stdlib-docs
