Override syntax highlighting for fypp files
Fixes #185

--- a/.gitattributes
+++ b/.gitattributes
@@ -29,3 +29,6 @@ codecov.yml export-ignore
 
 # Perform substitutions when `git export`ing these files
 .VERSION export-subst
+
+# Override syntax highlighting
+*.fypp linguist-language=fortran 
