support for older gfortran

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,8 +12,12 @@ if(CMAKE_Fortran_COMPILER_ID STREQUAL GNU)
   add_compile_options(-Wextra)
   add_compile_options(-Wimplicit-procedure)
   add_compile_options(-Wconversion-extra)
-  add_compile_options(-std=f2018)
   add_compile_options(-pedantic-errors)
+  if(CMAKE_Fortran_COMPILER_VERSION VERSION_GREATER_EQUAL 8.0)
+    add_compile_options(-std=f2008ts)
+  else()
+    add_compile_options(-std=f2018)
+  endif()
   if(CMAKE_Fortran_COMPILER_VERSION VERSION_GREATER_EQUAL 10.0)
     add_compile_options(-fallow-invalid-boz) # ToDo: hack for invalid code
   endif()
