implement Simpson's rule

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -7,6 +7,7 @@ set(fppFiles
     stdlib_experimental_stats_mean.fypp
     stdlib_experimental_quadrature.fypp
     stdlib_experimental_quadrature_trapz.fypp
+    stdlib_experimental_quadrature_simps.fypp
 )
 
 
