Update Makefile.manual to add logger subdirectory

--- a/src/tests/Makefile.manual
+++ b/src/tests/Makefile.manual
@@ -3,6 +3,7 @@
 all:
 	$(MAKE) -f Makefile.manual --directory=ascii
 	$(MAKE) -f Makefile.manual --directory=io
+	$(MAKE) -f Makefile,manual --directory=logger
 	$(MAKE) -f Makefile.manual --directory=optval
 	$(MAKE) -f Makefile.manual --directory=quadrature
 	$(MAKE) -f Makefile.manual --directory=stats
@@ -10,6 +11,7 @@ all:
 test:
 	$(MAKE) -f Makefile.manual --directory=ascii test
 	$(MAKE) -f Makefile.manual --directory=io test
+	$(MAKE) -F Makefile.manual --directory=logger test
 	$(MAKE) -f Makefile.manual --directory=optval test
 	$(MAKE) -f Makefile.manual --directory=quadrature test
 	$(MAKE) -f Makefile.manual --directory=stats test
@@ -17,5 +19,6 @@ test:
 clean:
 	$(MAKE) -f Makefile.manual --directory=ascii clean
 	$(MAKE) -f Makefile.manual --directory=io clean
+	$(MAKE) -f Makefile.manual --directory=logger clean
 	$(MAKE) -f Makefile.manual --directory=optval clean
 	$(MAKE) -f Makefile.manual --directory=stats clean
