Added dependence on stdlib_kinds.f90
Added dependence of stdlib_bitsets.f90 on stdlib_kinds.f90.

[ticket: X]

--- a/src/Makefile.manual
+++ b/src/Makefile.manual
@@ -43,6 +43,7 @@ clean:
 
 # Fortran module dependencies
 f18estop.o: stdlib_error.o
+stdlib_bitsets.o: stdlib_kinds.o
 stdlib_bitsets_64.o: stdlib_bitsets.o
 stdlib_bitsets_large.o: stdlib_bitsets.o
 stdlib_error.o: stdlib_optval.o
