Preliminary implementation of stringlist module
This commit introduces a very preliminary version of a module to handle lists of strings (that is: a structure containing strings of varying lengths)

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -37,6 +37,7 @@ set(SRC
     stdlib_error.f90
     stdlib_kinds.f90
     stdlib_logger.f90
+    stdlib_stringlist.f90
     stdlib_system.F90
     ${outFiles}
 )
