--- a/src/tests/CMakeLists.txt
+++ b/src/tests/CMakeLists.txt
@@ -15,6 +15,7 @@ add_subdirectory(optval)
 add_subdirectory(stats)
 add_subdirectory(system)
 add_subdirectory(quadrature)
+add_subdirectory(stringlist)
 
 ADDTEST(always_skip)
 set_tests_properties(always_skip PROPERTIES SKIP_RETURN_CODE 77)
